# lob-engine-cpp

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CMakeLists.txt  README.md  pyproject.toml
.cmake-test-build/: CMakeCache.txt  Makefile  cmake_install.cmake  lob_engine  test_order_book  test_parser
.github/workflows/: project-ci.yml  secret-scan.yml
benchmark/: bench_main.cpp  generate_report.py  lob_benchmark.cpp  report.md  run_all_benchmarks.sh  run_benchmarks.cpp  verify_correctness.cpp
benchmark/results/: aapl_baseline.txt  benchmark_results.csv  correctness_results.csv
data/: AAPL_2024-01-02_message_10.csv  MSFT_sample_messages.csv  MSFT_synthetic_message.csv  NVDA_sample_messages.csv  TSLA_sample_messages.csv  TSLA_synthetic_message.csv  sample_messages.csv
include/lob/: analytics.hpp  level_containers.hpp  order_book.hpp  parser.hpp  pipeline.hpp  replay.hpp  types.hpp
report/: benchmark_report.md
scripts/: generate_aapl_sample.py  generate_synthetic_data.py
src/: analytics.cpp  analytics_config.h  analytics_engine.cpp  analytics_engine.h  analytics_record.h  csv_exporter.cpp  csv_exporter.h  lobster_parser.cpp  lobster_parser.h  main.cpp  order_book.cpp  order_book.h  parser.cpp  pipeline.cpp  replay.cpp
src/project_real_time_limit_order_book_engine_in_c_1775258936/: __init__.py
tests/: test_analytics.cpp  test_analytics.py  test_analytics_engine.cpp  test_lobster_parser.cpp  test_order_book.cpp  test_order_book_integration.py  test_parser.cpp  test_parser.py  test_smoke.py
tests/data/: deterministic_replay.csv
